--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,14 @@
             <hr>
                 
             <form class="form-text">
-                  <p class="form-text">First name:</p>
-                  <input class="form-text" type="text" name="firstname"  value="First Name">
-                  <p class="form-text">Last name:</p>
-                  <input class="form-text" type="text" name="lastname" value="Last Name">
+                  <p class="form-text">Name:</p>
+                  <input class="form-text" type="text" name="firstname"  value="Name">
                   <p class="form-text">Email:</p>
                   <input class="form-text" type ="text" name="email" value="YourEmail@Provider.com">
                   <p class="form-text">Contact Number:</p>
                   <input class="form-text" type ="text" name="email" value="Telephone Number">
+                  <p class="form-text">Message:</p>
+                  <input class="form-text message-form" type ="text" name="email">
                   <br>
                   <br>
                   <br>
